Expr.g4
grammar Expr;

prog: expr EOF;

expr: left=expr op='^' right=expr         #infixExpr
    | left=expr op=('+'|'-') right=expr   #infixExpr
    | left=expr op=('*'|'/') right=expr   #infixExpr
    | INT                                 #numberExpr
    | '(' expr ')'                        #parensExpr
    ;

OP_ADD: '+';
OP_SUB: '-';
OP_MUL: '*';
OP_DIV: '/';
OP_POW: '^';

NEWLINE : [\r\n]+ ;
INT     : [0-9]+ ;
WS      : [ \t\r\n] -> channel(HIDDEN);
